// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/Home/AuditPlanRiskList render normal table 1`] = `
<body>
  <div>
    <div
      class="css-eydntv"
    >
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
        >
          <header
            class="css-1twz2l2"
          >
            <span
              class="custom-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 20 20"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="scan-2-fill"
                >
                  <path
                    d="M3.54756 4.72606L5.32804 6.50653C4.59869 7.48035 4.16669 8.68976 4.16669 10C4.16669 13.2217 6.77836 15.8333 10 15.8333C13.2217 15.8333 15.8334 13.2217 15.8334 10C15.8334 6.77835 13.2217 4.16667 10 4.16667C8.68977 4.16667 7.48036 4.59867 6.50655 5.32802L4.72608 3.54755C6.16264 2.37198 7.99896 1.66667 10 1.66667C14.6024 1.66667 18.3334 5.39763 18.3334 10C18.3334 14.6023 14.6024 18.3333 10 18.3333C5.39765 18.3333 1.66669 14.6023 1.66669 10C1.66669 7.99895 2.372 6.16262 3.54756 4.72606ZM6.52369 7.70218L10 11.1785L11.1785 10L7.7022 6.52367C8.36085 6.08741 9.15077 5.83334 10 5.83334C12.3012 5.83334 14.1667 7.69882 14.1667 10C14.1667 12.3012 12.3012 14.1667 10 14.1667C7.69884 14.1667 5.83335 12.3012 5.83335 10C5.83335 9.15076 6.08742 8.36084 6.52369 7.70218Z"
                    fill="#15C7D4"
                    id="Vector"
                  />
                </g>
              </svg>
            </span>
            待处理扫描任务
          </header>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <span
            class="table-limit-tips-text"
          >
            当前表格仅展示前5条数据
          </span>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-icon-only btn-icon-no-border basic-button-wrapper css-geipcv"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                class="custom-icon custom-icon-refresh css-u3jcp4"
                role="img"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.18677 2.58588C4.24526 1.66868 5.59943 1.16468 7.00002 1.16663C10.2218 1.16663 12.8334 3.77821 12.8334 6.99996C12.8334 8.24596 12.4425 9.40096 11.7775 10.3483L9.91669 6.99996H11.6667C11.6668 6.08508 11.3979 5.19035 10.8936 4.42703C10.3892 3.66371 9.67165 3.06547 8.83004 2.7067C7.98844 2.34793 7.05994 2.24446 6.15999 2.40914C5.26005 2.57383 4.42837 2.99941 3.76835 3.63296L3.18677 2.58588ZM10.8133 11.414C9.75478 12.3312 8.40061 12.8353 7.00002 12.8333C3.77827 12.8333 1.16669 10.2217 1.16669 6.99996C1.16669 5.75396 1.55752 4.59896 2.22252 3.65163L4.08335 6.99996H2.33335C2.33328 7.91485 2.60213 8.80958 3.10647 9.5729C3.61081 10.3362 4.32839 10.9345 5.17 11.2932C6.0116 11.652 6.9401 11.7555 7.84005 11.5908C8.73999 11.4261 9.57167 11.0005 10.2317 10.367L10.8133 11.414Z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup>
                    <col />
                    <col
                      style="width: 20%;"
                    />
                    <col
                      style="width: 10%;"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        扫描任务报告
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        来源
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        风险SQL
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        时间
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="1739836656367702018"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="css-q547fy"
                        >
                          <span
                            class="custom-icon css-u3jcp4"
                          >
                            <svg
                              fill="none"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                id="file-text-fill"
                              >
                                <path
                                  d="M14 6.00001V13.9953C14.0006 14.0829 13.984 14.1697 13.951 14.2508C13.9181 14.3319 13.8695 14.4058 13.808 14.4681C13.7466 14.5305 13.6734 14.5801 13.5928 14.6141C13.5121 14.6482 13.4255 14.6661 13.338 14.6667H2.662C2.48654 14.6667 2.31826 14.597 2.19413 14.473C2.07 14.349 2.00018 14.1808 2 14.0053V1.99468C2 1.63668 2.298 1.33334 2.66533 1.33334H9.33333V5.33334C9.33333 5.51015 9.40357 5.67972 9.52859 5.80475C9.65362 5.92977 9.82319 6.00001 10 6.00001H14ZM14 4.66668H10.6667V1.33534L14 4.66668ZM5.33333 4.66668V6.00001H7.33333V4.66668H5.33333ZM5.33333 7.33334V8.66668H10.6667V7.33334H5.33333ZM5.33333 10V11.3333H10.6667V10H5.33333Z"
                                  fill="#C3C6CD"
                                  id="Vector"
                                />
                              </g>
                            </svg>
                          </span>
                          <a
                            data-testid="report-time"
                            href="/sqle/project/700300/audit-plan/detail/test-risk/report/1739836656367702018"
                          >
                            生成时间 2023-12-27 12:32:38
                          </a>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <a
                          href="/sqle/project/700300/audit-plan/detail/test-risk"
                        >
                          test-risk
                        </a>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <span
                          class="ant-typography css-dev-only-do-not-override-bj9uhl"
                        >
                          <strong>
                            3
                          </strong>
                        </span>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2023-12-27 12:32:38
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="1739836656367702020"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="css-q547fy"
                        >
                          <span
                            class="custom-icon css-u3jcp4"
                          >
                            <svg
                              fill="none"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                id="file-text-fill"
                              >
                                <path
                                  d="M14 6.00001V13.9953C14.0006 14.0829 13.984 14.1697 13.951 14.2508C13.9181 14.3319 13.8695 14.4058 13.808 14.4681C13.7466 14.5305 13.6734 14.5801 13.5928 14.6141C13.5121 14.6482 13.4255 14.6661 13.338 14.6667H2.662C2.48654 14.6667 2.31826 14.597 2.19413 14.473C2.07 14.349 2.00018 14.1808 2 14.0053V1.99468C2 1.63668 2.298 1.33334 2.66533 1.33334H9.33333V5.33334C9.33333 5.51015 9.40357 5.67972 9.52859 5.80475C9.65362 5.92977 9.82319 6.00001 10 6.00001H14ZM14 4.66668H10.6667V1.33534L14 4.66668ZM5.33333 4.66668V6.00001H7.33333V4.66668H5.33333ZM5.33333 7.33334V8.66668H10.6667V7.33334H5.33333ZM5.33333 10V11.3333H10.6667V10H5.33333Z"
                                  fill="#C3C6CD"
                                  id="Vector"
                                />
                              </g>
                            </svg>
                          </span>
                          <a
                            data-testid="report-time"
                            href="/sqle/project/700300/audit-plan/detail//report/1739836656367702020"
                          >
                            生成时间 -
                          </a>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        -
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <span
                          class="ant-typography css-dev-only-do-not-override-bj9uhl"
                        >
                          <strong>
                            1
                          </strong>
                        </span>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        -
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/Home/AuditPlanRiskList render table with return error 1`] = `
<body>
  <div>
    <div
      class="css-eydntv"
    >
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
        >
          <header
            class="css-1twz2l2"
          >
            <span
              class="custom-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 20 20"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  id="scan-2-fill"
                >
                  <path
                    d="M3.54756 4.72606L5.32804 6.50653C4.59869 7.48035 4.16669 8.68976 4.16669 10C4.16669 13.2217 6.77836 15.8333 10 15.8333C13.2217 15.8333 15.8334 13.2217 15.8334 10C15.8334 6.77835 13.2217 4.16667 10 4.16667C8.68977 4.16667 7.48036 4.59867 6.50655 5.32802L4.72608 3.54755C6.16264 2.37198 7.99896 1.66667 10 1.66667C14.6024 1.66667 18.3334 5.39763 18.3334 10C18.3334 14.6023 14.6024 18.3333 10 18.3333C5.39765 18.3333 1.66669 14.6023 1.66669 10C1.66669 7.99895 2.372 6.16262 3.54756 4.72606ZM6.52369 7.70218L10 11.1785L11.1785 10L7.7022 6.52367C8.36085 6.08741 9.15077 5.83334 10 5.83334C12.3012 5.83334 14.1667 7.69882 14.1667 10C14.1667 12.3012 12.3012 14.1667 10 14.1667C7.69884 14.1667 5.83335 12.3012 5.83335 10C5.83335 9.15076 6.08742 8.36084 6.52369 7.70218Z"
                    fill="#15C7D4"
                    id="Vector"
                  />
                </g>
              </svg>
            </span>
            待处理扫描任务
          </header>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <span
            class="table-limit-tips-text"
          >
            当前表格仅展示前5条数据
          </span>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-icon-only btn-icon-no-border basic-button-wrapper css-geipcv"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                class="custom-icon custom-icon-refresh css-u3jcp4"
                role="img"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.18677 2.58588C4.24526 1.66868 5.59943 1.16468 7.00002 1.16663C10.2218 1.16663 12.8334 3.77821 12.8334 6.99996C12.8334 8.24596 12.4425 9.40096 11.7775 10.3483L9.91669 6.99996H11.6667C11.6668 6.08508 11.3979 5.19035 10.8936 4.42703C10.3892 3.66371 9.67165 3.06547 8.83004 2.7067C7.98844 2.34793 7.05994 2.24446 6.15999 2.40914C5.26005 2.57383 4.42837 2.99941 3.76835 3.63296L3.18677 2.58588ZM10.8133 11.414C9.75478 12.3312 8.40061 12.8353 7.00002 12.8333C3.77827 12.8333 1.16669 10.2217 1.16669 6.99996C1.16669 5.75396 1.55752 4.59896 2.22252 3.65163L4.08335 6.99996H2.33335C2.33328 7.91485 2.60213 8.80958 3.10647 9.5729C3.61081 10.3362 4.32839 10.9345 5.17 11.2932C6.0116 11.652 6.9401 11.7555 7.84005 11.5908C8.73999 11.4261 9.57167 11.0005 10.2317 10.367L10.8133 11.414Z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-empty ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup>
                    <col />
                    <col
                      style="width: 20%;"
                    />
                    <col
                      style="width: 10%;"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        扫描任务报告
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        来源
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        风险SQL
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        时间
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-placeholder"
                    >
                      <td
                        class="ant-table-cell"
                        colspan="4"
                      >
                        <div
                          class="ant-table-expanded-row-fixed"
                          style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                        />
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
